Fixed NewsletterPopup z-index

--- a/src/Components/Pages/Main/NewsletterPopup/NewsletterPopup.scss
+++ b/src/Components/Pages/Main/NewsletterPopup/NewsletterPopup.scss
@@ -7,7 +7,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0px 10px 15px -3px rgb(0 0 0 / 10%);
-    z-index: 10;
+    z-index: 15;
     @media(max-width: 768px){
         flex-direction: column-reverse;
     }
